src/codegen/tests/snapshots/rusty__codegen__tests__typesystem_test__aliased_datatypes_respect_conversion_rules.snap
---
source: src/codegen/tests/typesystem_test.rs
expression: result
---
; ModuleID = '<internal>'
source_filename = "<internal>"
target datalayout = "[filtered]"
target triple = "[filtered]"

%prg = type { i8, i32, i32 }

@prg_instance = global %prg zeroinitializer

define void @prg(%prg* %0) {
entry:
  %b = getelementptr inbounds %prg, %prg* %0, i32 0, i32 0
  %c = getelementptr inbounds %prg, %prg* %0, i32 0, i32 1
  %x = getelementptr inbounds %prg, %prg* %0, i32 0, i32 2
  %load_b = load i8, i8* %b, align [filtered]
  %1 = sext i8 %load_b to i32
  %load_c = load i32, i32* %c, align [filtered]
  %tmpVar = add i32 %1, %load_c
  store i32 %tmpVar, i32* %x, align [filtered]
  %load_c1 = load i32, i32* %c, align [filtered]
  %load_x = load i32, i32* %x, align [filtered]
  %tmpVar2 = add i32 %load_c1, %load_x
  %2 = trunc i32 %tmpVar2 to i8
  store i8 %2, i8* %b, align [filtered]
  ret void
}
