src/codegen/tests/snapshots/rusty__codegen__tests__typesystem_test__float_and_double_mix_converted_to_double.snap
---
source: src/codegen/tests/typesystem_test.rs
expression: result
---
; ModuleID = '<internal>'
source_filename = "<internal>"
target datalayout = "[filtered]"
target triple = "[filtered]"

%prg = type { float, double, double }

@prg_instance = global %prg zeroinitializer

define void @prg(%prg* %0) {
entry:
  %a = getelementptr inbounds %prg, %prg* %0, i32 0, i32 0
  %b = getelementptr inbounds %prg, %prg* %0, i32 0, i32 1
  %c = getelementptr inbounds %prg, %prg* %0, i32 0, i32 2
  %load_b = load double, double* %b, align [filtered]
  %load_a = load float, float* %a, align [filtered]
  %1 = fpext float %load_a to double
  %tmpVar = fadd double %load_b, %1
  store double %tmpVar, double* %c, align [filtered]
  ret void
}
